// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation: deleteProperty should delete property 1`] = `
Object {
  "data": Object {
    "deleteProperty": "1",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: deleteProperty should error if property does not exist 1`] = `"{\\"message\\":\\"property with id 2 does not exist\\",\\"locations\\":[{\\"line\\":2,\\"column\\":3}],\\"path\\":[\\"deleteProperty\\"],\\"extensions\\":{\\"code\\":\\"NOT_FOUND\\"}}"`;

exports[`Mutation: deleteProperty should error if property does not exist 2`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: property with id 2 does not exist],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
